--- a/src/screens/Day/dayscreens.css
+++ b/src/screens/Day/dayscreens.css
@@ -8,6 +8,25 @@
   margin-top: 24px;
 }
 
+.tutorial {
+  display: none;
+}
+
+.tutorial.video {
+  display: block;
+  position: fixed;
+}
+
+.tutorialPlayer {
+  width: 560px; 
+  height: 315px;
+  top: 20%;
+  left: 25%;
+  z-index: 25;
+  box-shadow: 0 10px 10px rgba(0,0,0,0.2);
+  border-radius: 20px;
+  border: 10px solid #004a22;
+}
 
 .tile {
   margin-top: 24px;
@@ -21,7 +40,7 @@
   text-align: start;
   min-height: 388px;
   height: auto;
-  width: 388px;
+  min-width: 388px;
   margin: 0 1em;
 }
 
@@ -111,6 +130,7 @@
         font-weight: 700; 
         color: #004a22;
         opacity: 0.5;
+        font-size: 96px;
       }
 
       .row.button {
