--- a/src/screens/Profile/profile.css
+++ b/src/screens/Profile/profile.css
@@ -11,9 +11,10 @@
   flex-direction: column;
   justify-content: center;
   background-color: whitesmoke;
-  padding: 24px 24px 12px 24px; 
+  padding: 16px 20px; 
   color: #004a22;
   border-radius: 10px;
+  box-shadow: 0 10px 10px rgba(0,0,0,0.2);
   text-align: start;
 }
 
