--- a/src/screens/Quiz/Debrief/quizdebrief.css
+++ b/src/screens/Quiz/Debrief/quizdebrief.css
@@ -75,8 +75,8 @@
 
 .debriefButton {
   background-color: #004a22;
-  color: #EBF4FA;
-  font-family: 'Koulen', cursive;
+  color: whitesmoke;
+  font-family: 'Futura';
   border: 1px solid #004a22;
 padding: 0 6px 0 6px;
   border-radius: 5px;
