--- a/src/screens/Day/dayscreens.css
+++ b/src/screens/Day/dayscreens.css
@@ -15,6 +15,7 @@
 .tutorial.video {
   display: block;
   position: fixed;
+  z-index: 25;
 }
 
 .tutorialPlayer {
@@ -109,6 +110,7 @@
       .formInput,
       .formInput:focus,
       .formInput:active {
+        height: auto;
         background-color: transparent; 
         border: none;
         box-shadow: none;
