--- a/src/components/Loading/pageloading.css
+++ b/src/components/Loading/pageloading.css
@@ -35,4 +35,39 @@
   border: none;
 }
 
+.tileLoading {
+  height: 97px;
+  width: 97px;
+  background-color: #004a22;
+  padding: 16px 20px; 
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  text-align: start;
+  margin: 0 1em;
+  box-shadow: 0 10px 10px rgba(0,0,0,0.2);
+  animation: 8s ease-in-out  infinite alternate flipFlop;
+}
+
+@keyframes flipFlop {
+  0% {
+    transform: rotateY(0) scale3d(1,1,1);
+  }
+  25% {
+    transform: rotateY(360deg) scale3d(0.8,0.8,0.8);
+  }
+  50% {
+    transform: rotateY(0) scale3d(1,1,1);
+  }
+  75% {
+    transform: rotateY(360deg) scale3d(0.8,0.8,0.8);
+  }
+  100% {
+    transform: rotateY(0) scale3d(1,1,1);
+  }
+}
+
+
 
