--- a/src/components/Header/centralheader.css
+++ b/src/components/Header/centralheader.css
@@ -1,10 +1,29 @@
 .nav.central {
   height: 10vh;
   width: 100%;
-  justify-self:first baseline; 
+  justify-self: first baseline; 
   display: flex;
   justify-content: space-between;
   padding: 0 36px;
+}
+
+.nav.mobile {
+  height: auto;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 6px 12px;
+}
+
+.burger {
+  margin: 0;
+  padding: 2px 6px;
+  border-radius: 5px;
+  background-color: #004a22;
+  color:whitesmoke;
+  border: 1px solid whitesmoke;
+  transform: scale(1.2);
 }
 
 nav .box {
@@ -57,5 +76,72 @@ nav .box {
   left: 0px;
 }
 
+.menu {
+  opacity: 0;
+  height: 0;
+  color: whitesmoke;
+  transition: all .5s ease-in-out;
+}
 
+.menu.active {
+  opacity: 1;
+  height: auto;
+  background-color: #004a22;
+  color: whitesmoke;
+  transition: height 1s ease-in-out, opacity .5s ease-in-out;
+}
+
+.navMenu,
+.navDock {
+  display: none;
+}
+
+.navMenu li {
+  list-style: none;
+}
+
+.listItem a {
+  color: whitesmoke;
+}
+
+.navDock.active {
+  height: 20vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  overflow:scroll;
+}
+
+.navDock.active li {
+  padding: 6px 0;
+  width: 100%;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.mobiledock.row {
+  height: 10vh;
+  width: 100%; 
+  background-color: whitesmoke;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.mobiledock.row h1 {
+  color:#004a22; 
+}
+
+.navMenu.active {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
 
