--- a/src/screens/Day/dayscreens.css
+++ b/src/screens/Day/dayscreens.css
@@ -1,3 +1,4 @@
+@media only screen and (min-width: 481px) and (max-width: 2000px) { 
 .updateday.container,
 .createday.container {
   height: 70vh;
@@ -145,3 +146,150 @@
       .row.button button {
         width: auto;
       }
+    }
+
+      @media only screen and (min-width: 0px) and (max-width: 480px) { 
+
+        .updateday.container,
+        .createday.container {
+          height: 100vh;
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start;
+          align-items: flex-start;
+        }
+
+        .tile {
+          height: auto;
+          width: 100%;
+          margin-top: 12px;
+          border-radius: 5px;
+          padding: 16px 20px; 
+          margin: 12px 0;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: flex-start;
+          text-align: start;
+          background-color: whitesmoke;
+          box-shadow: 0 10px 10px rgba(0,0,0,0.2);
+        }
+
+        .mobFrame {
+          display: none;
+        }
+
+        .mobFrame.active {
+          height: max-content;
+          
+        }
+
+        .tutorial {
+          display: none;
+        }
+        
+        .tutorial.video {
+          display: block;
+          position: fixed;
+          z-index: 25;
+        }
+
+        .tile textarea {
+          width: 100%;
+        }
+        
+        .momentRow {
+          width: 90%;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+        }
+        
+        .dateRow {
+          width: 100%;
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          margin-bottom: 16px;
+          padding-bottom: 10px;
+          border-bottom: 0.5px dashed rgba(0,0,0,0.2);
+        }
+
+        .weekSlider {
+          -webkit-appearance: none;
+          appearance: none;
+          width: 100%;
+          height: 5px;
+          border-radius: 5px;
+          -webkit-transition: .2s;
+          transition: opacity .2s;
+          margin-top: 12px;
+          background: whitesmoke;
+          outline: 0.5px solid rgba(0,0,0,0.2);
+        }
+        
+        
+        .weekSlider::-webkit-slider-thumb {
+          -webkit-appearance: none;
+          appearance: none;
+          width: 15px;
+          height: 15px;
+          border-radius: 50%;
+          cursor: pointer;
+          border-radius: 2px;
+          background-color: #004a22;
+        }
+
+        .weekSlider::-moz-range-thumb {
+          width: 25px;
+          height: 25px;
+          background: #004a22;
+          cursor: pointer;
+        }
+
+        .dock.footer {
+          display: none;
+        }
+
+        .dateRow input {
+          background-color: transparent;
+          outline: none;
+          border: none;
+          font-family:'Futura';
+        }
+
+        .dateRow label {
+          margin-right: 12px;
+        }
+
+        .statement.starter {
+          font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+          font-weight: 200;
+          color: #004a22;
+        }
+      
+        .formInput.moment {
+          width: 100%;
+        }
+  
+        .formInput.moment::placeholder {
+          font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+          font-weight: 200;
+          color: #004a22;
+        }
+  
+  
+  
+        .formInput,
+        .formInput:focus,
+        .formInput:active {
+          height: auto;
+          background-color: transparent; 
+          border: none;
+          box-shadow: none;
+          text-decoration: none;
+          outline: none;
+        }
+
+        }
