--- a/src/screens/Insight/insightscreen.css
+++ b/src/screens/Insight/insightscreen.css
@@ -1,3 +1,4 @@
+@media only screen and (min-width: 481px) and (max-width: 2000px) { 
 .viewinsight.container {
     height: 70vh;
     width: 100%;
@@ -40,4 +41,54 @@
 .statsRow label {
   font-size: 12px;
   color: #004a22;
+}
+} 
+
+@media only screen and (min-width: 0px) and (max-width: 480px) { 
+  .viewinsight.container {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .tabContainer {
+    height: 100%;
+    width: 100%;
+    margin: 24px 0 12px 0;
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-tabs .nav-link {
+  color: rgba(0,0,0,0.2);
+}
+
+.nav-tabs .nav-link:hover {
+  background-color: #004a22;
+  color: whitesmoke;
+}
+
+ .nav-tabs .nav-link.active {
+  border-bottom: 3px solid #004a22;
+  background-color: whitesmoke;
+} 
+
+
+.statsRow {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 6px;
+}
+
+.statsRow label {
+  font-size: 12px;
+  color: #004a22;
+}
 }
