--- a/src/screens/Login/loginscreen.css
+++ b/src/screens/Login/loginscreen.css
@@ -1,3 +1,4 @@
+@media only screen and (min-width: 481px) and (max-width: 2000px) { 
 /* Login */
 #login-screen {
   height: 75vh;
@@ -62,4 +63,30 @@ text-align: start;
 
 #loginLogo {
   filter: brightness(0%) opacity(2.5%);
+}
+
+}
+
+@media only screen and (min-width: 0px) and (max-width: 480px) { 
+  #login-screen {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+  
+  .loginContainer {
+    height: auto;
+    width: 100%;
+    padding: 16px 20px; 
+    border-radius: 5px;
+    background-color: whitesmoke;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: start;
+    box-shadow: 0 10px 10px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
 }
