--- a/src/screens/Week/weekscreen.css
+++ b/src/screens/Week/weekscreen.css
@@ -1,3 +1,4 @@
+@media only screen and (min-width: 481px) and (max-width: 2000px) { 
 .weekContainer {
   height: 50vh;
   width: 100%;
@@ -82,4 +83,67 @@
   cursor: pointer;
   border-radius: 2px;
   background-color: #004a22;
+}
+}
+
+@media only screen and (min-width: 0px) and (max-width: 480px) { 
+  .weekContainer {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  #weektest {
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .weekTile {
+    height: 100%;
+    width: 95%;
+    padding: 16px 20px; 
+    border-radius: 5px;
+    background-color: whitesmoke;
+    margin-top: 12px;
+    margin: 12px 0;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    text-align: start;
+    box-shadow: 0 10px 10px rgba(0,0,0,0.2);
+  }
+  
+  .formInput.week::placeholder {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 200;
+    color: black;
+  }
+  
+  #objOne,
+  #objTwo,
+  #objThree,
+  #objFour, 
+  #objFive,
+  #objSix,
+  #objSeven,
+  #objEight,
+  #objNine,
+  #objTen {
+    height: 100%;
+    width: 100%;
+  }
+
+  .dock.footer {
+    display: none;
+  }
+
 }
