--- a/src/screens/Year/yearscreen.css
+++ b/src/screens/Year/yearscreen.css
@@ -1,3 +1,4 @@
+@media only screen and (min-width: 481px) and (max-width: 2000px) { 
 .yearContainer {
   height: 79vh;
   width: 100%;
@@ -152,4 +153,44 @@
 .memory {
   grid-row: 3 / span 2;
   grid-column: 7 / span 2;
+}
+}
+
+@media only screen and (min-width: 0px) and (max-width: 480px) { 
+  .yearContainer {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+  #yeartest {
+    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .yeartile {
+    height: 100%;
+    width: 95%;
+    padding: 16px 20px; 
+    border-radius: 5px;
+    margin-top: 12px;
+    margin: 12px 0;
+    background-color: whitesmoke;
+    box-shadow: 0 10px 10px rgba(0,0,0,0.2);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    text-align: start;
+    z-index: 1;
+  }
+
+
 }
