--- a/src/screens/LandingPage/landingpagescreen.css
+++ b/src/screens/LandingPage/landingpagescreen.css
@@ -2,10 +2,9 @@
 .loggedInMain {
   height: 90vh;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(20, 1fr);
+  grid-template-rows: repeat(20, 1fr);
 }
 
 #lpTutorial {
@@ -18,7 +17,12 @@ h2 {
 }
 
 .side {
-display: none
+  grid-column: 1 / 3;
+  grid-row: 2 / 18;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .newsfeed {
@@ -128,7 +132,18 @@ margin-bottom: 4px;
 }
 
 .community {
-display: none;
+  grid-column: 15 / 20;
+  grid-row: 2 / 10;
+  background-color: whitesmoke;
+  margin-left: 24px;
+  padding: 16px 20px; 
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  text-align: start;
+  border-radius: 5px;
+  box-shadow: 0 10px 10px rgba(0,0,0,0.2);
 }
 
 .insightRow {
@@ -302,9 +317,11 @@ font-family: 'Futura';
   .loggedInMain {
     height: 90vh;
     width: 100%;
-    display: grid;
-    grid-template-columns: repeat(20, 1fr);
-    grid-template-rows: repeat(20, 1fr);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+
   }
   
   #lpTutorial {
@@ -317,19 +334,13 @@ font-family: 'Futura';
   }
   
   .side {
-    grid-column: 1 / 3;
-    grid-row: 2 / 18;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+    display: none;
   }
   
   .newsfeed {
-    width: 100%;
+    width: 95%;
+    margin-top: 12px;
     overflow: scroll;
-    grid-column: 5 / 15;
-    grid-row: 2 / 18;
     background-color: whitesmoke;
     box-shadow: 0 10px 10px rgba(0,0,0,0.2);
     padding: 16px 20px; 
@@ -343,6 +354,7 @@ font-family: 'Futura';
   
   .newsitem {
     margin: 4px 0;
+    white-space: none;
   }
   
   .title {
@@ -434,18 +446,7 @@ font-family: 'Futura';
   }
   
   .community {
-    grid-column: 15 / 20;
-    grid-row: 2 / 10;
-    background-color: whitesmoke;
-    margin-left: 24px;
-    padding: 16px 20px; 
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    text-align: start;
-    border-radius: 5px;
-    box-shadow: 0 10px 10px rgba(0,0,0,0.2);
+    display: none;
   }
   
   .insightRow {
@@ -606,8 +607,8 @@ font-family: 'Futura';
     }
   
     .newsFeedPlayer {
-      width: 560px; 
-      height: 315px;
+      width: 85vw; 
+      height: 50vw;
       top: 20%;
       left: 25%;
       z-index: 25;
@@ -616,5 +617,8 @@ font-family: 'Futura';
       margin-top: 12px;
     }
 
+    .hideDockLP {
+      display: none;
+    }
 
 }
