--- a/src/screens/LandingPage/landingpagescreen.css
+++ b/src/screens/LandingPage/landingpagescreen.css
@@ -28,6 +28,8 @@ h2 {
 .newsfeed {
   width: 100%;
   overflow: scroll;
+  grid-column: 5 / 15;
+  grid-row: 2 / 18;
   background-color: whitesmoke;
   box-shadow: 0 10px 10px rgba(0,0,0,0.2);
   padding: 16px 20px; 
