--- a/src/components/Header/centralheader.css
+++ b/src/components/Header/centralheader.css
@@ -14,7 +14,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 6px 12px;
+  padding: 10px 12px;
 }
 
 .burger {
@@ -23,7 +23,6 @@
   border-radius: 5px;
   background-color: #004a22;
   color:whitesmoke;
-  border: 1px solid whitesmoke;
   transform: scale(1.2);
 }
 
@@ -81,21 +80,35 @@ nav .box {
 .menu {
   opacity: 0;
   height: 0;
+  width: 100%;
   color: whitesmoke;
-  transition: all .5s ease-in-out;
+  transition: all 1s ease-in-out;
 }
 
 .menu.active {
   opacity: 1;
-  height: auto;
+  height: 20vh;
+  width: 100%;
   background-color: #004a22;
   color: whitesmoke;
-  transition: height 1s ease-in-out, opacity .5s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  transition: all 1s ease-in-out;
 }
 
 .navMenu,
 .navDock {
   display: none;
+}
+
+.navMenu.active {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .navMenu li {
@@ -122,8 +135,9 @@ nav .box {
   width: 100%;
   list-style: none;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
+
 
 .mobiledock.row {
   height: 10vh;
@@ -134,6 +148,19 @@ nav .box {
   flex-direction: row;
   align-items: center;
 }
+
+.row.values {
+  height: 10vh;
+  width: 100%; 
+  background-color: whitesmoke;
+  border-radius: 5px;
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 6px 0 6px;
+}
+
 
 .dockElement {
   width: auto;
@@ -152,12 +179,5 @@ nav .box {
 
 .mobiledock.row h1 {
   color:#004a22; 
-}
-
-.navMenu.active {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
 }
 
